--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <main>
             <h1> Airton Mendoza | WDD 130</h1>
             <img src="images/profile.webp" alt="Airton Mendoza" width="200">
-            <p>My name is Airton Mendoza, I am 21 years old and I served in the Peru Chiclayo Mission, I came back home 1 year ago and it's been a great time, I love the missionary work and I'm trying to work as hard as I can to help to share the gospel.</p>
+            <p>My name is Airton Mendoza, I am 21 years old and I served in the Peru Chiclayo Mission, I came back home 1 year ago and it's been a great time, I love the missionary work and I'm trying to work as hard as I can to help to share the gospel. I am excited to learn in BYU about Software Development.</p>
         </main>
 
         <footer>
