--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title> Airton Mendoza | WDD 130</title>
+        <meta name="description" content="Airton Mendoza, WDD130, Rafting site">
+        <meta name="author" content="Airton Mendoza">
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <header>
@@ -18,7 +21,13 @@
             <img src="images/profile.webp" alt="Airton Mendoza" width="200">
             <p>My name is Airton Mendoza, I am 21 years old and I served in the Peru Chiclayo Mission, I came back home 1 year ago and it's been a great time, I love the missionary work and I'm trying to work as hard as I can to help to share the gospel. I am excited to learn in BYU about Software Development.</p>
         </main>
-
+        
+        <aside>
+            <h2>Lima</h2>
+            <img src="images/lima.jpg" alt="Lima, Perú" width="400">
+            <p>Lima is the capital and most populous city of Peru, a vi brant political, cultural, and financial center located on the country's desert coast, facing the Pacific Ocean.</p>
+        </aside>
+        
         <footer>
             <p>©️2025 ⚽ Airton Mendoza ⚽ Lima, Perú</p>
         </footer>
