--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <aside>
             <h2>Lima</h2>
             <img src="images/lima.jpg" alt="Lima, Perú" width="400">
-            <p>Lima is the capital and most populous city of Peru, a vi brant political, cultural, and financial center located on the country's desert coast, facing the Pacific Ocean.</p>
+            <p>Lima is the capital and most populous city of Peru, a vi brant political, cultural, and financial center located on the country's desert coast, facing the Pacific Ocean. We have delicious food here in Peru and we're very kind people.</p>
         </aside>
         
         <footer>
