--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title> Airton Mendoza | WDD 130</title>
         <meta name="description" content="Airton Mendoza, WDD130, Rafting site">
         <meta name="author" content="Airton Mendoza">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="styles/styles.css">
     </head>
     <body>
         <header>
