--- a/wwr/about.html
+++ b/wwr/about.html
@@ -6,33 +6,35 @@
         <title> Rafting Site – About Us Page</title>
         <meta name="description" content="Airton Mendoza, WDD130, Rafting site">
         <meta author="Airton Josue Mendoza Velasquez">
+        <link rel="stylesheet" href="styles/rafting.css">
     </head>
 
     <body>
         <header>
-            <img src="logo">
+            <img src="images/downtheriver.png" alt="down the river picture">
             <nav>
-                <a>Structure</a>
-                <a>Of</a>
-                <a>The</a>
-                <a>Page</a>
+                <a href="index.html">Home</a>
+                <a href="about.html">About Us</a>
+                <a href="trips.html">Trips</a>
+                <a href="contact.html">Contact Us</a>
             </nav>
         </header>
 
         <main>
             <div>
-                <img src="hero">
+                <img src="images/hero.webp">
             </div>
 
-            <h1></h1>
+            <h1>Down the River Rafting</h1>
             <article>
-                <img src="happy client">
-                <p></p>
+                <img src="images/happy_client.jpg">
+                <p>A rafting site is a place by the river where people can enjoy white-water rafting— a fun and exciting water adventure using inflatable rafts. These sites are usually set up in areas with fast-moving water and beautiful natural surroundings. They often include safe starting points, trained guides, and places to rent equipment.
+                    Whether you're a beginner or an experienced rafter, rafting sites offer a great way to enjoy nature, challenge the rapids, and have an unforgettable outdoor experience.</p>
             </article>
 
             <section>
                 <h2>History</h2>
-                <p>brief history</p>
+                <p>Founded in 2022, our rafting company began with a simple mission: to share the thrill of white-water rafting with people of all ages and experience levels. What started as a small local operation with just a few rafts and passionate guides has grown into one of the region's most trusted adventure providers. Over the years, we've guided thousands of guests through the rapids, always putting safety, fun, and respect for nature at the heart of what we do. With a team of certified guides and a love for the outdoors, we continue to offer unforgettable river adventures and lasting memories. </p>
             </section>
 
             <section>
@@ -41,11 +43,11 @@
         </main>
 
         <footer>
-            <p>copyright</p>
-            <nav>socialmedia
-                <a><img src=""></a>
-                <a><img src=""></a>
-                <a><img src=""></a>
+            <p>©️2025 Down the River Rafting / Airton Mendoza</p>
+            <nav class="socialmedia">
+                <a href="https://facebook.com"><img src="images/facebook.png" alt="Facebook Icon"></a>
+                <a href="https://linkedin.com"><img src="images/linkedin.png" alt="Linkedin Icon"></a>
+                <a href="https://instagram.com"><img src="images/instagram.png" alt="Instagram Icon"></a>
             </nav>
         </footer>
     
