--- a/wwr/about.html
+++ b/wwr/about.html
@@ -21,16 +21,16 @@
         </header>
 
         <main>
-            <div>
+            <div class="hero">
                 <img src="images/hero.webp">
-            </div>
 
-            <h1>Down the River Rafting</h1>
-            <article>
-                <img src="images/happy_client.jpg">
-                <p>A rafting site is a place by the river where people can enjoy white-water rafting— a fun and exciting water adventure using inflatable rafts. These sites are usually set up in areas with fast-moving water and beautiful natural surroundings. They often include safe starting points, trained guides, and places to rent equipment.
+                 <h1>Down the River Rafting</h1>
+                <article>
+                    <img src="images/happy_client.jpg">
+                    <p>A rafting site is a place by the river where people can enjoy white-water rafting— a fun and exciting water adventure using inflatable rafts. These sites are usually set up in areas with fast-moving water and beautiful natural surroundings. They often include safe starting points, trained guides, and places to rent equipment.
                     Whether you're a beginner or an experienced rafter, rafting sites offer a great way to enjoy nature, challenge the rapids, and have an unforgettable outdoor experience.</p>
-            </article>
+                </article>
+            </div>
 
             <section>
                 <h2>History</h2>
