--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             </nav>
         </header>
 
+        <div class="grid">
         <main>
             <h1> Airton Mendoza | WDD 130</h1>
             <img src="images/profile.webp" alt="Airton Mendoza" width="200">
@@ -27,7 +28,8 @@
             <img src="images/lima.jpg" alt="Lima, Perú" width="400">
             <p>Lima is the capital and most populous city of Peru, a vi brant political, cultural, and financial center located on the country's desert coast, facing the Pacific Ocean. We have delicious food here in Peru and we're very kind people.</p>
         </aside>
-        
+        </div>
+
         <footer>
             <p>©️2025 ⚽ Airton Mendoza ⚽ Lima, Perú</p>
         </footer>
