--- a/wwr/about.html
+++ b/wwr/about.html
@@ -24,15 +24,27 @@
 
         <main>
             <div class="hero">
-                <img src="images/hero.webp">
+                <h1>Down the River Rafting</h1>
+                <section>
+                    
 
-                 <h1>Down the River Rafting</h1>
-                <article>
-                    <img src="images/happy_client.jpg">
-                    <p>A rafting site is a place by the river where people can enjoy white-water rafting— a fun and exciting water adventure using inflatable rafts. These sites are usually set up in areas with fast-moving water and beautiful natural surroundings. They often include safe starting points, trained guides, and places to rent equipment.
-                    Whether you're a beginner or an experienced rafter, rafting sites offer a great way to enjoy nature, challenge the rapids, and have an unforgettable outdoor experience.</p>
-                </article>
+                    <img src="images/hero.webp">
+
+                    
+                    <article>
+                        <img src="images/happy_client.jpg">
+                        <p>A rafting site is a place by the river where people can enjoy white-water rafting— a fun and exciting water adventure using inflatable rafts. These sites are usually set up in areas with fast-moving water and beautiful natural surroundings. They often include safe starting points, trained guides, and places to rent equipment.
+                        Whether you're a beginner or an experienced rafter, rafting sites offer a great way to enjoy nature, challenge the rapids, and have an unforgettable outdoor experience.</p>
+                    </article>
+                </section>
             </div>
+
+
+
+
+
+
+
 
             <section>
                 <h2>History</h2>
