--- a/wwr/about.html
+++ b/wwr/about.html
@@ -46,24 +46,24 @@
         <h2>Adventure Awaits You</h2>
         <div class="adventure-gallery">
             <figure>
-                <img src="image1.jpg" alt="Los Dientes del Diablo">
-                <figcaption>Los Dientes del Diablo</figcaption>
+                <img src="images/rio_colorado.jpg" alt="Río Colorado, Gran Cañón, EE.UU.">
+                <figcaption>Río Colorado, Gran Cañón, EE.UU.</figcaption>
             </figure>
             <figure>
-                <img src="image2.jpg" alt="Big Mallard">
-                <figcaption>Big Mallard</figcaption>
+                <img src="images/río_zambeze.jpg" alt="Río Zambeze, Zimbabue">
+                <figcaption>Río Zambeze, Zimbabue</figcaption>
             </figure>
             <figure>
-                <img src="image3.jpg" alt="Half Day Adventure">
-                <figcaption>Half Day Adventure</figcaption>
+                <img src="images/río_futaleufú.jpg" alt="Río Futaleufú, Chile">
+                <figcaption>Río Futaleufú, Chile</figcaption>
             </figure>
             <figure>
-                <img src="image4.jpg" alt="The Gauntlet">
-                <figcaption>The Gauntlet</figcaption>
+                <img src="images/río_pacuare.jpg" alt="Río Pacuare, Costa Rica">
+                <figcaption>Río Pacuare, Costa Rica</figcaption>
             </figure>
             <figure>
-                <img src="image5.jpg" alt="Snake River Run">
-                <figcaption>Snake River Run</figcaption>
+                <img src="image5.jpg" alt="Río Tully, Queensland, Australia">
+                <figcaption>Río Tully, Queensland, Australia</figcaption>
             </figure>
         </div>
     </section>
