--- a/wwr/about.html
+++ b/wwr/about.html
@@ -57,11 +57,11 @@
                 <figcaption>Río Futaleufú, Chile</figcaption>
             </figure>
             <figure>
-                <img src="images/río_pacuare.jpg" alt="Río Pacuare, Costa Rica">
+                <img src="images/río_pacuare.webp" alt="Río Pacuare, Costa Rica">
                 <figcaption>Río Pacuare, Costa Rica</figcaption>
             </figure>
             <figure>
-                <img src="image5.jpg" alt="Río Tully, Queensland, Australia">
+                <img src="images/río_tully.webp" alt="Río Tully, Queensland, Australia">
                 <figcaption>Río Tully, Queensland, Australia</figcaption>
             </figure>
         </div>
