--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -41,38 +41,48 @@
                 </div>
             </section>
 
-            <section class="history">
-                <h2>History</h2>
-                <p>Founded in 2022, our rafting company began with a simple mission: to share the thrill of white-water rafting with people of all ages and experience levels. What started as a small local operation with just a few rafts and passionate guides has grown into one of the region's most trusted adventure providers. Over the years, we've guided thousands of guests through the rapids, always putting safety, fun, and respect for nature at the heart of what we do. With a team of certified guides and a love for the outdoors, we continue to offer unforgettable river adventures and lasting memories.</p>
-                <img src="images/happy_client.jpg">
+            <section class="team">
+                <h2>We are Here to serve You</h2>
+                <figure class="employee">
+                <img src="images/alvin_meredith.jpg" alt="Photo of Alvin, Operations Manager">
+                <figcaption>Alvin F. Meredith III — Operations Manager</figcaption>
+                </figure>
+                <figure class="employee">
+                <img src="images/HenryJEyring.jpg" alt="Photo of Henry, Reservations">
+                <figcaption>Henry J. Eyring — Reservations</figcaption>
+                </figure>
+                <figure class="employee">
+                <img src="images/d_todd_christofferson.webp" alt="Photo of Todd, Guide Lead">
+                <figcaption>D. Todd Christofferson — Guide Lead</figcaption>
+                </figure>
+            </section>    
+
+            <section class="contact-form">
+                <form action="#" method="post" novalidate>
+                <label for="name">Full name</label>
+                <input id="name" name="name" type="text" required>
+
+                <label for="email">Email Address</label>
+                <input id="email" name="email" type="email" required>
+
+                <fieldset>
+                    <legend>Purpose of Message</legend>
+                    <label><input type="radio" name="purpose" value="general" required> General Inquiry</label>
+                    <label><input type="radio" name="purpose" value="reservation"> Reservation Question</label>
+                    <label><input type="radio" name="purpose" value="suggestion"> Website Suggestion</label>
+                </fieldset>
+
+                <label for="message">Message</label>
+                <textarea id="message" name="message" rows="6" required></textarea>
+
+                <label class="checkbox">
+                    <input id="subscribe" name="subscribe" type="checkbox">
+                    Please subscribe me to the monthly newsletter
+                </label>
+
+                <button type="submit" class="btn-submit">¡Get in Touch!</button>
+                </form>
             </section>
-
-            <section class="adventure">
-        <h2>Adventure Awaits You</h2>
-        <div class="adventure-gallery">
-            <figure>
-                <img src="images/rio_colorado.jpg" alt="Río Colorado, Gran Cañón, EE.UU.">
-                <figcaption>Río Colorado, Gran Cañón, EE.UU.</figcaption>
-            </figure>
-            <figure>
-                <img src="images/río_zambeze.jpg" alt="Río Zambeze, Zimbabue">
-                <figcaption>Río Zambeze, Zimbabue</figcaption>
-            </figure>
-            <figure>
-                <img src="images/río_futaleufú.jpg" alt="Río Futaleufú, Chile">
-                <figcaption>Río Futaleufú, Chile</figcaption>
-            </figure>
-            <figure>
-                <img src="images/río_pacuare.webp" alt="Río Pacuare, Costa Rica">
-                <figcaption>Río Pacuare, Costa Rica</figcaption>
-            </figure>
-            <figure>
-                <img src="images/río_tully.webp" alt="Río Tully, Queensland, Australia">
-                <figcaption>Río Tully, Queensland, Australia</figcaption>
-            </figure>
-        </div>
-    </section>
-
         </main>
 
         <footer>
