--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
     <body>
         <header>
             <nav>
-                <a href="#">Home</a>
-                <a href="wwr/">Rafting Website</a>
+                <ul class="navigation">
+                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="trips.html">Trips</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
+                </ul>
             </nav>
         </header>
         
