--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title> Rafting Site – About Us Page </title>
+        <title> Down The River – About Us Page </title>
         <meta name="description" content="Airton Mendoza, rafting information, our history, places where we offer our service.">
         <meta author="Airton Josue Mendoza Velasquez">
         <link rel="stylesheet" href="styles/rafting.css">
