--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title> Rafting Site – Contact Us Page </title>
+        <title> Down The River – Contact Us Page </title>
         <meta name="description" content="Contact Down the River Rafting for reservations, general questions, and feedback. Find our address, phone, employee contacts and a contact form.">
         <meta author="Airton Josue Mendoza Velasquez">
         <link rel="stylesheet" href="styles/information.css">
