--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <header>
             <nav>
                 <ul class="navigation">
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="about.html">About Us</a></li>
-                    <li><a href="trips.html">Trips</a></li>
-                    <li><a href="contact.html">Contact Us</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="wwr/about.html">About Us</a></li>
+                    <li><a href="wwr/trips.html">Trips</a></li>
+                    <li><a href="wwr/contact.html">Contact Us</a></li>
                 </ul>
             </nav>
         </header>
